src/objects/FEP__c.object
<CustomObject>
    <description>This object stores the data to calculate the Full Economic Potential of an Account.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FEP</relationshipLabel>
        <relationshipName>FEP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advance_Rate__c</fullName>
        <description>Advance Rate</description>
        <inlineHelpText>Enter the current Advance Rate</inlineHelpText>
        <label>Advance Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Any_Non_WEX_Fuel__c</fullName>
        <description>Any Non-WEX Fuel?</description>
        <inlineHelpText>Any other fuel providers? (Yes/No)</inlineHelpText>
        <label>Any Non-WEX Fuel?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_Non_Fuel_purchases_enabled__c</fullName>
        <description>AU field. Are the fuel cards enabled for non-fuel purchases?</description>
        <label>Are Non-Fuel purchases enabled?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_You_Under_Contract__c</fullName>
        <label>Are You Under Contract?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_You_Willing_to_Direct_Your_Drivers__c</fullName>
        <label>Are You Willing to Direct Your Drivers?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>As_of2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>As of</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>As_of__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>As of</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bulk_Fuel__c</fullName>
        <description>Bulk Fuel?</description>
        <inlineHelpText>Do you have Bulk Fuel (No/Yes)?</inlineHelpText>
        <label>Do you have Bulk Fuel?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Causing_Cash_Flow_Issues__c</fullName>
        <description>Is the speed of getting paid for your loads causing you cash flow issues?</description>
        <inlineHelpText>Is the speed of getting paid for your loads causing you cash flow issues?</inlineHelpText>
        <label>Causing Cash Flow Issues?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Owned_Assets__c</fullName>
        <label>Company Owned Assets</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company Drivers</fullName>
                </value>
                <value>
                    <fullName>Owner Operators</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Primary_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <description>Primary Contact Phone</description>
        <formula>Primary_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AU field. The best person to contact for trade card related opportunities.</description>
        <inlineHelpText>The best person to contact for trade card related opportunities.</inlineHelpText>
        <label>Trade Card Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FEP (Trade Card Contact)</relationshipLabel>
        <relationshipName>FEPPeLZ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_line_allow_all_vehicles_to_run__c</fullName>
        <description>Does your approved credit line allow you to run all of your vehicles on our program? (Factoring is often used to supplement fleets that cannont be extended additional credit based upon their current worthiness).</description>
        <inlineHelpText>Does your approved credit line allow you to run all of your vehicles on our program? (Factoring is often used to supplement fleets that cannont be extended additional credit based upon their current worthiness).</inlineHelpText>
        <label>Credit line allow all vehicles to run?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency_to_Number_Test__c</fullName>
        <description>Just a test to see if currency can be changed to a number</description>
        <label>Currency to Number Test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_APD_Virtual_Contract_Expiration__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Current APD/Virtual Contract Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Bulk_Fuel_Provider__c</fullName>
        <label>Current Bulk Fuel Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Aspen</fullName>
                </value>
                <value>
                    <fullName>Axxis</fullName>
                </value>
                <value>
                    <fullName>CSI Road</fullName>
                </value>
                <value>
                    <fullName>Current Fuel Suppliers</fullName>
                </value>
                <value>
                    <fullName>Current Fuel Transporters</fullName>
                </value>
                <value>
                    <fullName>Digital Dispatch</fullName>
                </value>
                <value>
                    <fullName>FuelQuest</fullName>
                </value>
                <value>
                    <fullName>Factor</fullName>
                </value>
                <value>
                    <fullName>FireStream</fullName>
                </value>
                <value>
                    <fullName>FuelBay</fullName>
                </value>
                <value>
                    <fullName>Gilbarco/VeederRoot</fullName>
                </value>
                <value>
                    <fullName>Intellifuel</fullName>
                </value>
                <value>
                    <fullName>Internal/Proprietary</fullName>
                </value>
                <value>
                    <fullName>Mansfield</fullName>
                </value>
                <value>
                    <fullName>NoViolations</fullName>
                </value>
                <value>
                    <fullName>Pilot Wholesale</fullName>
                </value>
                <value>
                    <fullName>PDI</fullName>
                </value>
                <value>
                    <fullName>Pinnacle</fullName>
                </value>
                <value>
                    <fullName>Smart Logix</fullName>
                </value>
                <value>
                    <fullName>TAC</fullName>
                </value>
                <value>
                    <fullName>Titan</fullName>
                </value>
                <value>
                    <fullName>TMW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Contract_Expiration_Date__c</fullName>
        <description>Date of current service expiration date (for whichever opportunity product is applicable)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date that the current competitive contract expires</inlineHelpText>
        <label>Current Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Diesel_Purchasing_Provider__c</fullName>
        <label>Current Diesel Purchasing Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>OTR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Discount_Type__c</fullName>
        <label>Current Discount Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rebates</fullName>
                </value>
                <value>
                    <fullName>Cost Plus</fullName>
                </value>
                <value>
                    <fullName>Retail Minus</fullName>
                </value>
                <value>
                    <fullName>Direct Bill</fullName>
                </value>
                <value>
                    <fullName>Cost Plus .vs. Pump Adjust (better of)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Non_Fuel_Payment_Method__c</fullName>
        <description>Au field. The way the customer currently pays for non-fuel</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Non-Fuel Payment Method</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_PayCard_Provider__c</fullName>
        <label>Current Paycard Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>Achieve Card</fullName>
                </value>
                <value>
                    <fullName>BB&amp;T Bank</fullName>
                </value>
                <value>
                    <fullName>Brightwell Payments</fullName>
                </value>
                <value>
                    <fullName>Cardvanatage</fullName>
                </value>
                <value>
                    <fullName>Chase</fullName>
                </value>
                <value>
                    <fullName>CITI</fullName>
                </value>
                <value>
                    <fullName>Citizens Bank</fullName>
                </value>
                <value>
                    <fullName>Comdata</fullName>
                </value>
                <value>
                    <fullName>Commonwealth Card Services</fullName>
                </value>
                <value>
                    <fullName>Direct Express</fullName>
                </value>
                <value>
                    <fullName>Elan Financial Services</fullName>
                </value>
                <value>
                    <fullName>FlexWage</fullName>
                </value>
                <value>
                    <fullName>FSV</fullName>
                </value>
                <value>
                    <fullName>Global Cash Card</fullName>
                </value>
                <value>
                    <fullName>Global PayCard</fullName>
                </value>
                <value>
                    <fullName>Green Dot</fullName>
                </value>
                <value>
                    <fullName>Intuit - Quickbooks - NetSpend</fullName>
                </value>
                <value>
                    <fullName>Key Bank</fullName>
                </value>
                <value>
                    <fullName>Load-N-Go</fullName>
                </value>
                <value>
                    <fullName>Money Manager</fullName>
                </value>
                <value>
                    <fullName>Money Network</fullName>
                </value>
                <value>
                    <fullName>NetSpend</fullName>
                </value>
                <value>
                    <fullName>Pay Partners</fullName>
                </value>
                <value>
                    <fullName>PNC</fullName>
                </value>
                <value>
                    <fullName>Premier Paycards</fullName>
                </value>
                <value>
                    <fullName>Ready Funds</fullName>
                </value>
                <value>
                    <fullName>Regions Bank</fullName>
                </value>
                <value>
                    <fullName>Sage Payroll Card</fullName>
                </value>
                <value>
                    <fullName>Simply Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Paycard_Contract_Expiration_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Paycard Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Retail_Fuel_Provider__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Provider</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Telematics_Contract_Expiration__c</fullName>
        <description>Enter the date that the current telematics contract expires.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date that the current telematics contract expires.</inlineHelpText>
        <label>Current Telematics Contract Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Vehicle_Maintenance_Provider__c</fullName>
        <label>Current Vehicle Maintenance Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>WESN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_method_for_purchasing_diesel__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>40 characters or less.</inlineHelpText>
        <label>Current method for purchasing diesel?</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_trade_card_provider__c</fullName>
        <description>Used to identify the current provider</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter &quot;In House&quot; if the customer manages it themselves</inlineHelpText>
        <label>Current trade card provider</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_using_quick_pays__c</fullName>
        <description>Are you currently using quick pays?</description>
        <inlineHelpText>Are you currently using quick pays?</inlineHelpText>
        <label>Currently using quick pays?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Denotes_fields_that_will_be_removed__c</fullName>
        <description>Any field with an * will be removed shortly.  This data should be input under a different field on the form</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Field to be removed, please transfer/update this value to another field on this form, usually a dropdown selection..</inlineHelpText>
        <label>* - Denotes fields that will be removed</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_You_Factor__c</fullName>
        <label>Do You Factor?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_You_Have_POS_Discounts__c</fullName>
        <label>Do You Have POS Discounts?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_You_Have_a_Preferred_Vendor__c</fullName>
        <label>Do You Have a Preferred Vendor?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_You_Run_Dedicated_Routes__c</fullName>
        <label>Do You Run Dedicated Routes?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_a_Fuel_contract__c</fullName>
        <description>Do you have a Fuel contract?</description>
        <inlineHelpText>Enter No or Yes if other Fuel Contract</inlineHelpText>
        <label>Do you have a Fuel contract?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_a_Paycard_Contract__c</fullName>
        <label>Do you have a Paycard Contract?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_a_Purchase_Card_contract__c</fullName>
        <description>Do you have a Purchase Card contract?</description>
        <label>Do you have a Purchase Card contract?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_a_Telematics_contract__c</fullName>
        <label>Do you have a Telematics contract?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_a_trade_card_program__c</fullName>
        <description>AU field. Used to identify if the customer has a trade card program</description>
        <label>Do you have a trade card program?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_an_APD_Virtual_Contract__c</fullName>
        <label>Do you have an APD/Virtual Contract?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_issue_per_diems__c</fullName>
        <description>Do you issue per diems? (No/Yes)</description>
        <inlineHelpText>Per Diems? (No/Yes)</inlineHelpText>
        <label>Do you issue per diems?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_use_Card_Readers__c</fullName>
        <label>Do you use Card Readers?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drivers_need_cash_on_the_road__c</fullName>
        <description>Do your drivers need cash while on the road?</description>
        <label>Drivers need cash on the road?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EST_Service_Spend__c</fullName>
        <label>EST Service Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Epayables_Solution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>*Epayables Solution (APD)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Epayables_Spend__c</fullName>
        <label>*Epayables Spend (APD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FEP_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FEP Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FEP_Opportunity_Product__c</fullName>
        <description>To be used when creating an opportunity or follow up task</description>
        <inlineHelpText>Select the product line for creating an opportunity or follow-up task</inlineHelpText>
        <label>FEP Opportunity/Follow-up Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fuel</fullName>
                </value>
                <value>
                    <fullName>Vehicle Maintenance</fullName>
                </value>
                <value>
                    <fullName>Bulk Fuel</fullName>
                </value>
                <value>
                    <fullName>Purchase Card</fullName>
                </value>
                <value>
                    <fullName>Telematics</fullName>
                </value>
                <value>
                    <fullName>rapid! Paycard</fullName>
                </value>
                <value>
                    <fullName>APD/Virtual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FEP_Status__c</fullName>
        <description>Current Status of FEP completion</description>
        <inlineHelpText>Current Status of FEP completion</inlineHelpText>
        <label>FEP Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                    <default>true</default>
                    <label>Initial</label>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Factoring_Contact_Email__c</fullName>
        <formula>Factoring_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Factoring Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factoring_Contact_Phone__c</fullName>
        <formula>Fuel_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Factoring Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factoring_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Factoring Contact Name</description>
        <inlineHelpText>Enter The Factoring Contact Name</inlineHelpText>
        <label>Factoring Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FEP (Factoring Contact)</relationshipLabel>
        <relationshipName>FEP6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Factoring_Contract_Expiration__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Factoring Contract Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Factoring_Notes__c</fullName>
        <description>Notes for Factoring Follow Up</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Notes for Factoring Follow Up</inlineHelpText>
        <label>Factoring Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <description>Date to check back with Account regarding FEP</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter Date to check back with account regarding FEP</inlineHelpText>
        <label>Follow-Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fuel_Card_Gallons__c</fullName>
        <label>Monthly Gallons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fuel_Card_Potential__c</fullName>
        <description>The total card potential minus the active cards</description>
        <formula>Total_fuel_card_opportunity__c  -  Account__r.Active_Cards__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of cards that could be won by WEX</inlineHelpText>
        <label>Fuel Card Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fuel_Card_Provider__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fuel Card Provider</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel_Card_Spend__c</fullName>
        <label>Monthly Fuel Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fuel_Contact_Email__c</fullName>
        <formula>Fuel_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fuel Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel_Contact_Phone__c</fullName>
        <formula>Fuel_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fuel Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact name for Fuel</description>
        <inlineHelpText>Contact name to discuss Fuel</inlineHelpText>
        <label>Fuel Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FEP (Fuel Contact)</relationshipLabel>
        <relationshipName>FEP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fuel_Discounts__c</fullName>
        <label>Where Are Your Current Fuel  Discounts?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pilot / Flying J</fullName>
                </value>
                <value>
                    <fullName>TA Petro</fullName>
                </value>
                <value>
                    <fullName>Loves</fullName>
                </value>
                <value>
                    <fullName>Independents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fuel_Management_Contact_Email__c</fullName>
        <formula>Fuel_Management_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fuel Management Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel_Management_Contact_Phone__c</fullName>
        <formula>Fuel_Management_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fuel Management Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel_Management_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fuel Management Contact Name</description>
        <inlineHelpText>Enter the Fuel Management Contact Name</inlineHelpText>
        <label>Fuel Management Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FEP (Fuel Management Contact)</relationshipLabel>
        <relationshipName>FEP4</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>